syntax = "proto3";
package zfsrpc;

service ZfsRpc {
    rpc DatasetList (Empty) returns (Datasets);
    rpc ListDatasets (ListDatasetsRequest) returns (Datasets);
    rpc CreateVolume (CreateVolumeRequest) returns (Volume);
    rpc GetVolume (BasicDatasetRequest) returns (Volume);
    rpc DestroyVolume (BasicDatasetRequest) returns (Empty);
    rpc CreateFilesystem (CreateFilesystemRequest) returns (Filesystem);
    rpc GetFilesystem (BasicDatasetRequest) returns (Filesystem);
    rpc DestroyFilesystem (BasicDatasetRequest) returns (Empty);
    rpc MountFilesystem (MountFilesystemRequest) returns (Empty);
    rpc UnmountFilesystem (BasicDatasetRequest) returns (Empty);
    rpc CreateSnapshot (CreateSnapshotRequest) returns (Snapshot);
    rpc GetSnapshot (BasicDatasetRequest) returns (Snapshot);
    rpc DestroySnapshot (BasicDatasetRequest) returns (Empty);
    rpc CreateBookmark (CreateBookmarkRequest) returns (Bookmark);
    rpc GetBookmark (BasicDatasetRequest) returns (Bookmark);
    rpc DestroyBookmark (BasicDatasetRequest) returns (Empty);
    rpc Send (SendRequest) returns (stream SendSegment);
    rpc Recv (stream SendSegment) returns (Empty);
}

message Datasets {
    repeated Dataset datasets = 1;
}

message ListDatasetsRequest {
    string parent = 1;
    bool recursive = 2;
    ZfsType type = 3;
}

message CreateVolumeRequest {
    string name = 1;
    uint64 capacity = 2;
    uint64 blocksize = 3;
    repeated VolumeProperty properties = 4;
}

message CreateFilesystemRequest {
    string name = 1;
    repeated FilesystemProperty properties = 2;
}

message BasicDatasetRequest {
    string name = 1;
}

message MountFilesystemRequest {
    string name = 1;
    string mountpoint = 2;
}

message CreateSnapshotRequest {
    string dataset = 1;
    string name = 2;
    bool recursive = 3;
}

message CreateBookmarkRequest {
    string snapshot = 1;
    string bookmark = 2;
}

enum ZfsType {
    UNKNOWN = 0;
    FILESYSTEM = 1;
    SNAPSHOT = 2;
    VOLUME = 4;
    POOL = 8;
    BOOKMARK = 16;
}

message Dataset {
    string name = 1;
    ZfsType type = 2;
}

message Volume {
    DatasetProperties.Name name = 1;
    DatasetProperties.Available available = 2;
    DatasetProperties.Checksum checksum = 3;
    DatasetProperties.Compression compression = 4;
    DatasetProperties.LogicalUsed logicalused = 5;
    DatasetProperties.Guid guid = 6;
    DatasetProperties.Creation creation = 7;
    DatasetProperties.CreateTxg createtxg = 8;
    DatasetProperties.CompressRatio compressratio = 9;
    DatasetProperties.Used used = 10;
    DatasetProperties.Referenced referenced = 11;
    DatasetProperties.LogicalReferenced logicalreferenced = 12;
    DatasetProperties.ObjSetId objsetid = 13;
    DatasetProperties.VolSize volsize = 14;
    DatasetProperties.BlockSize blocksize = 15;
    DatasetProperties.VolMode volmode = 16;
}

message Filesystem {
    DatasetProperties.Name name = 1;
    DatasetProperties.Available available = 2;
    DatasetProperties.ATime atime = 3;
    DatasetProperties.Devices devices = 4;
    DatasetProperties.Nbmand nbmand = 5;
    DatasetProperties.Overlay overlay = 6;
    DatasetProperties.Readonly readonly = 7;
    DatasetProperties.Relatime relatime = 8;
    DatasetProperties.Setuid setuid = 9;
    DatasetProperties.Vscan vscan = 10;
    DatasetProperties.Zoned zoned = 11;
    DatasetProperties.Exec exec = 12;
    DatasetProperties.CanMount canmount = 13;
    DatasetProperties.Mounted mounted = 14;
    DatasetProperties.Checksum checksum = 15;
    DatasetProperties.Compression compression = 16;
    DatasetProperties.LogicalUsed logicalused = 17;
    DatasetProperties.Guid guid = 18;
    DatasetProperties.Creation creation = 19;
    DatasetProperties.CreateTxg createtxg = 20;
    DatasetProperties.CompressRatio compressratio = 21;
    DatasetProperties.Used used = 22;
    DatasetProperties.Referenced referenced = 23;
    DatasetProperties.LogicalReferenced logicalreferenced = 24;
    DatasetProperties.ObjSetId objsetid = 25;
}

message Snapshot {
    DatasetProperties.Name name = 1;
    DatasetProperties.Guid guid = 18;
    DatasetProperties.ObjSetId objsetid = 25;
}

message Bookmark {
    DatasetProperties.Name name = 1;
    DatasetProperties.Guid guid = 18;
    DatasetProperties.Creation creation = 19;
    DatasetProperties.CreateTxg createtxg = 20;
}

message SendRequest {
    string from = 1;
    string source = 2;
}

message SendSegment {
    string name = 1;
    fixed64 sequence = 2;
    bytes buffer = 3;
}

message VolumeProperty {
    oneof property{
        DatasetProperties.Checksum checksum = 1;
        DatasetProperties.Compression compression = 2;
        DatasetProperties.VolMode vol_mode = 3;
    }
}

message FilesystemProperty {
    oneof property{
        DatasetProperties.CanMount can_mount = 1;
        DatasetProperties.ATime a_time = 2;
        DatasetProperties.Checksum checksum = 3;
        DatasetProperties.Compression compression = 4;
        DatasetProperties.Devices devices = 5;
        DatasetProperties.Exec exec = 6;
        DatasetProperties.Nbmand nbmand = 7;
        DatasetProperties.Overlay overlay = 8;
        DatasetProperties.Readonly readonly = 9;
        DatasetProperties.Relatime relatime = 10;
        DatasetProperties.Setuid setuid = 11;
        DatasetProperties.Vscan vscan = 12;
        DatasetProperties.Zoned zoned = 13;
        DatasetProperties.OnOff on_off = 14;
        DatasetProperties.OnOffNoAuto On_Off_NoAuto = 15;
    }
}

message DatasetProperties {

    message OnOff {
        oneof value {
            Variant on = 1;
            Variant off = 2;
        }
    }

    message OnOffNoAuto {
        oneof value {
            Variant on = 1;
            Variant off = 2;
            Variant no_auto = 3;
        }
    }

    message YesNo {
        oneof value {
            Variant yes = 1;
            Variant no = 2;
        }
    }

    message CanMount {
        oneof value {
            Variant on = 1;
            Variant off = 2;
            Variant no_auto = 3;
        }
    }

    message Mounted {
        oneof value {
            Variant yes = 1;
            Variant no = 2;
        }
    }

    message ATime {
        oneof value {
            Variant on = 1;
            Variant off = 2;
        }
    }

    message Checksum {
        oneof value {
            Variant on = 1;
            Variant off = 2;
            Variant fletcher2 = 3;
            Variant fletcher4 = 4;
            Variant sha256 = 5;
            Variant no_parity = 6;
            Variant sha512 = 7;
            Variant skein = 8;
            Variant edonr = 9;
        }
    }

    message Devices {
        oneof value {
            Variant on = 1;
            Variant off = 2;
        }
    }

    message Exec {
        oneof value {
            Variant on = 1;
            Variant off = 2;
        }
    }

    message Nbmand {
        oneof value {
            Variant on = 1;
            Variant off = 2;
        }
    }

    message Overlay {
        oneof value {
            Variant on = 1;
            Variant off = 2;
        }
    }

    message Readonly {
        oneof value {
            Variant on = 1;
            Variant off = 2;
        }
    }

    message Relatime {
        oneof value {
            Variant on = 1;
            Variant off = 2;
        }
    }

    message Setuid {
        oneof value {
            Variant on = 1;
            Variant off = 2;
        }
    }

    message Vscan {
        oneof value {
            Variant on = 1;
            Variant off = 2;
        }
    }

    message Zoned {
        oneof value {
            Variant on = 1;
            Variant off = 2;
        }
    }

    message Compression {
        oneof value {
            Variant on = 1;
            Variant off = 2;
            Variant gzip = 3;
            Variant gzip_1 = 4;
            Variant gzip_2 = 5;
            Variant gzip_3 = 6;
            Variant gzip_4 = 7;
            Variant gzip_5 = 8;
            Variant gzip_6 = 9;
            Variant gzip_7 = 10;
            Variant gzip_8 = 11;
            Variant gzip_9 = 12;
            Variant lz4 = 13;
            Variant lzjb = 14;
            Variant zle = 15;
            Variant zstd = 16;
            Variant zstd_fast = 17;
        }
    }

    message VolMode {
        oneof value {
            Variant default = 1;
            Variant full = 2;
            Variant geom = 3;
            Variant dev = 4;
            Variant none = 5;
            Variant unknown = 6;
        }
    }

    message Name {
        string value = 1;
    }

    message Available {
        uint64 value = 1;
    }

    message LogicalUsed {
        uint64 value = 1;
    }

    message Guid {
        uint64 value = 1;
    }

    message Creation {
        uint64 value = 1;
    }

    message CreateTxg {
        uint64 value = 1;
    }

    message CompressRatio {
        uint64 value = 1;
    }

    message Used {
        uint64 value= 1;
    }

    message Referenced {
       uint64 value = 1;
    }

    message LogicalReferenced {
        uint64 value = 1;
    }

    message  ObjSetId {
        uint64 value = 1;
    }

    message VolSize {
        uint64 value = 1;
    }

    message BlockSize{
        uint64 value = 1;
    }
}

message Empty {}
message Variant {}
